relatively stable release 1.3a5.  It works towards the new stable
release 1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree.

6/13/2001: mkoeppe
	   When configure does not find a language, don't use default
	   paths like /usr/local/include; this only causes build
	   problems.
	   New directory: Examples/Guile/test-suite, where a few
	   bugs in 1.3a5 are demonstrated. 
	   Handle C++ methods that have both a "const" and a "throw"
	   directive (see Examples/Guile/test-suite/cplusplus-throw.i); 
	   thanks to Scott B. Drummonds for the report and the fix. 
	   [Ruby] Fixed typo in rubydec.swg; thanks to Lyle Johnson!

6/12/2001: mkoeppe
	   [Guile] VECTORLENINPUT and LISTLENINPUT now have separate
	   list length variables. TYPEMAP_POINTER_INPUT_OUTPUT
	   attaches argument documentation involving SCM_TYPE to the
	   standard pointer typemaps. INOUT is now an alias for BOTH.

6/12/2001: cheetah (william fulton)
	   Some Java documentation added.
	   [Java] Fixed bugs in import pragma and shadow pragma. 

6/12/2001: mkoeppe
	   Fix declarations of SWIG_define_class
	   (Lib/ruby/rubydec.swg) and SWIG_TypeQuery
	   (Lib/common.swg). Thanks to Lyle Johnson
	   <ljohnson@resgen.com> for the patches.

6/11/2001: mkoeppe
	   [Guile] Use long instead of scm_bits_t; this makes the
	   generated wrapper code compatible with Guile 1.3.4
	   again. Thanks to Masaki Fukushima for pointing this out.

6/11/2001: cheetah (william fulton)
	   The generic INSTALL file from autoconf added. Few changes to README file.

6/11/2001: mkoeppe
	   Fixed typo in Makefile.in; thanks to Greg Troxel
	   <gdt@ir.bbn.com>. 

6/08/2001: cheetah (william fulton)
	   make check works again. Examples/GIFPlot configure generated by
	   top level autoconf now.

6/08/2001: mkoeppe