@@ -11,7 +11,12 @@ This directory contains SWIG documentation:
 <li><a href="engineering.html">Engineering Manual</a>
 <li><a href="internals.html">Internals Manual</a>
 <li><a href="jswig.html">Some Java User Documentation</a>
+<li><a href="migrate.txt">SWIG1.3 Migration Guide</a>
 </ul>
+
+<hr>
+Copyright (C) 1999-2001
+<a href="mailto:swig-dev@cs.uchicago.edu">SWIG Development Team</a>
 
 </body>
 </html>
