@@ -1292,5 +1292,9 @@ is created, so you can use <code>(<var>struct</var>-<var>member</var>
 
 [TODO]
 
+<hr>
+Copyright (C) 1999-2001
+<a href="mailto:swig-dev@cs.uchicago.edu">SWIG Development Team</a>
+
 </body>
 </html>
